HELL YEAH IT WORKS

--- a/lovely.toml
+++ b/lovely.toml
@@ -43,7 +43,13 @@ match_indent = true
 times = 1
 
 [[patches]]
-[[patches.pattern]]
-target = "state_events.lua"
+[patches.pattern]
+match_indent = true
+times = 1
+target = "functions/state_events.lua"
+pattern = "check_for_unlock({type = 'chip_score', chips = math.floor(hand_chips*mult)})"
 position = "after"
-payload = "'check_for_unlock({type = 'hpfx_7mult', mult = math.floor(mult)})'''
+payload = '''
+    check_for_unlock({type = 'hpfx_7mult', mult = math.floor(mult)})
+'''
+
