--- a/lovely.toml
+++ b/lovely.toml
@@ -133,7 +133,14 @@ payload = '''
 match_indent = true
 times = 1
 target = "card.lua"
-pattern = "if self.ability.name == 'Space Joker' and pseudorandom('space') < G.GAME.probabilities.normal/self.ability.extra then"
+pattern = '''
+if self.ability.name == 'Space Joker' and pseudorandom('space') < G.GAME.probabilities.normal/self.ability.extra then
+    return {
+        card = self,
+        level_up = true,
+        message = localize('k_level_up_ex')
+    }
+'''
 position = "after"
 payload = '''
     SMODS.calculate_context{chudhit = true}
