--- a/lovely.toml
+++ b/lovely.toml
@@ -27,54 +27,54 @@ visiblyIjiraq = self.visiblyIjiraq,
 '''
 times = 1
 
-[[patches]] # Ijiraq Patch 3 (patches properly)
-[patches.pattern]
-target = "card.lua"
-pattern = "self.children.center.atlas = G.ASSET_ATLAS[(_center.atlas or (_center.set == 'Joker' or _center.consumeable or _center.set == 'Voucher') and _center.set) or 'centers']"
-position = "at"
-payload = '''
-print("UNGABUNGA")
-if true then
-    self.children.center.atlas = G.ASSET_ATLAS['hpfx_IjiraqJokers']
-else
-    self.children.center.atlas = G.ASSET_ATLAS[(_center.atlas or (_center.set == 'Joker' or _center.consumeable or _center.set == 'Voucher') and _center.set) or 'centers']
-end
-'''
-match_indent = true
-times = 1
+# [[patches]] # Ijiraq Patch 3 (patches properly)
+# [patches.pattern]
+# target = "card.lua"
+# pattern = "self.children.center.atlas = G.ASSET_ATLAS[(_center.atlas or (_center.set == 'Joker' or _center.consumeable or _center.set == 'Voucher') and _center.set) or 'centers']"
+# position = "at"
+# payload = '''
+# print("UNGABUNGA")
+# if true then
+#     self.children.center.atlas = G.ASSET_ATLAS['hpfx_IjiraqJokers']
+# else
+#     self.children.center.atlas = G.ASSET_ATLAS[(_center.atlas or (_center.set == 'Joker' or _center.consumeable or _center.set == 'Voucher') and _center.set) or 'centers']
+# end
+# '''
+# match_indent = true
+# times = 1
 
-[[patches]] # Ijiraq Patch 4 (patches properly)
-[patches.pattern]
-target = "card.lua"
-pattern = '''if _center.soul_pos then'''
-position = "before"
-payload = '''
-if self.isIjiraq then
-    self.children.center.atlas = G.ASSET_ATLAS['hpfx_IjiraqJokers']
-    self.children.center:set_sprite_pos(_center.pos)
-else
-    self:remove()
-end
-'''
-match_indent = true
-times = 1
+# [[patches]] # Ijiraq Patch 4 (patches properly)
+# [patches.pattern]
+# target = "card.lua"
+# pattern = '''if _center.soul_pos then'''
+# position = "before"
+# payload = '''
+# if self.isIjiraq then
+#     self.children.center.atlas = G.ASSET_ATLAS['hpfx_IjiraqJokers']
+#     self.children.center:set_sprite_pos(_center.pos)
+# else
+#     self:remove()
+# end
+# '''
+# match_indent = true
+# times = 1
 
-[[patches]] # Ijiraq Patch 5 (patches properly)
-[patches.pattern]
-target = "card.lua"
-pattern = '''
-if _center then 
-    if _center.set then
-'''
-position = "at"
-payload = '''
-if _center then
-    print("center!")
-    if _center.set then
-        print("set!")
-'''
-match_indent = true
-times = 1
+# [[patches]] # Ijiraq Patch 5 (patches properly)
+# [patches.pattern]
+# target = "card.lua"
+# pattern = '''
+# if _center then 
+#     if _center.set then
+# '''
+# position = "at"
+# payload = '''
+# if _center then
+#     print("center!")
+#     if _center.set then
+#         print("set!")
+# '''
+# match_indent = true
+# times = 1
 
 
 
