--- a/lovely.toml
+++ b/lovely.toml
@@ -27,7 +27,7 @@ visiblyIjiraq = self.visiblyIjiraq,
 '''
 times = 1
 
-[[patches]]
+[[patches]] # Ijiraq Patch 3 (patches properly) WORKS
 [patches.pattern]
 times = 1
 match_indent = true
@@ -35,8 +35,8 @@ target = "functions/common_events.lua"
 pattern = "local jokers, triggered = card:calculate_joker(context)"
 position = "at"
 payload = '''
-if G.GAME.raqeffects and next(G.GAME.raqeffects) then
-    local old_ability, old_center, old_center_key, extra_jokers_list, jokers_table = copy_table(card.ability), card.config.center, card.config.center_key, G.GAME.raqeffects, {}
+if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key = 'j_hpfx_ijiraq' then
+    local old_ability, old_center, old_center_key, extra_jokers_list, jokers_table = copy_table(card.ability), card.config.center, card.config.center_key, copy_table(G.GAME.raqeffects), {}
     table.sort(extra_jokers_list, function(a, b) return (G.P_CENTERS[a].order or 0) < (G.P_CENTERS[b].order or 0) end)
     table.insert(extra_jokers_list, 1, card.config.center.key)
     for _, k in ipairs(extra_jokers_list) do
