--- a/lovely.toml
+++ b/lovely.toml
@@ -215,7 +215,7 @@ pattern = "card.T.x = self.T.x"
 position = "at"
 payload = '''
 if (next(SMODS.find_card('j_hpfx_galilimbo')) then
-    if pseudorandom('galilimbo') > 0.8) then
+    if pseudorandom('galilimbo') > 0.8 then
         card:remove()
         card = nil
         card = create_card("Planet", G.pack_cards, nil, nil, true, true, nil, 'glb')
