Chud Update done

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,6 @@
 {
     "workspace.library": [
-      "C:\\Users\\deadb\\AppData\\Roaming\\Hyperfixation\\Mods\\smods-main\\lsp_def",
+      "C:\\Users\\deadb\\AppData\\Roaming\\Hyperfixation\\Mods\\Steamodded\\lsp_def",
       "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Balatro",
       "C:\\Users\\deadb\\love2d-main"
     ],
