--- a/lovely.toml
+++ b/lovely.toml
@@ -83,7 +83,7 @@ end
 '''
 position = "after"
 payload = '''
-if _card.config.center.key == "j_hpfx_pyramid" then
+if _card.config.center.key == "j_hpfx_pyramid" or _card.config.center.key == "j_hpfx_earthbound" then
     hpfx_Transform(_card)
 end
 '''
