--- a/lovely.toml
+++ b/lovely.toml
@@ -42,12 +42,15 @@ if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key == '
     table.insert(extra_jokers_list, 1, card.config.center.key)
     for _, k in ipairs(extra_jokers_list) do
         Hyperglobal.safe_set_ability(card, G.P_CENTERS[k])
+        card:update(0.016)
         local joker, trig = card:calculate_joker(context)
         triggered = triggered or trig
         if joker then
             table.insert(jokers_table, joker)
         end
+        last = k
     end
+    
     G.GAME.hpfx_ijiraq_savedvalues = G.GAME.hpfx_ijiraq_savedvalues or {}
     G.GAME.hpfx_ijiraq_savedvalues[card.sort_id] = G.GAME.hpfx_ijiraq_savedvalues[card.sort_id] or {}
     G.GAME.hpfx_ijiraq_savedvalues[card.sort_id][last] = copy_table(card.ability)
