--- a/lovely.toml
+++ b/lovely.toml
@@ -39,7 +39,6 @@ local jokers, triggered
 if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key == 'j_hpfx_ijiraq' then
     local old_ability, old_center, old_center_key, extra_jokers_list, jokers_table = copy_table(card.ability), card.config.center, card.config.center_key, copy_table(G.GAME.raqeffects), {}
     table.sort(extra_jokers_list, function(a, b) return (G.P_CENTERS[a].order or 0) < (G.P_CENTERS[b].order or 0) end)
-    table.insert(extra_jokers_list, 1, card.config.center.key)
     for _, k in ipairs(extra_jokers_list) do
         Hyperglobal.safe_set_ability(card, G.P_CENTERS[k])
         card:update(0.016)
@@ -49,6 +48,9 @@ if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key == '
             table.insert(jokers_table, joker)
         end
         last = k
+    end
+    if jokers then
+        table.insert(jokers_table, 1, jokers)
     end
     
     G.GAME.hpfx_ijiraq_savedvalues = G.GAME.hpfx_ijiraq_savedvalues or {}
