--- a/lovely.toml
+++ b/lovely.toml
@@ -42,6 +42,7 @@ if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key == '
     for _, k in ipairs(extra_jokers_list) do
         Hyperglobal.safe_set_ability(card, G.P_CENTERS[k])
         card:update(0.016)
+        --print(card.ability.extra)
         local joker, trig = card:calculate_joker(context)
         triggered = triggered or trig
         if joker then
