--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
-#app-specific
-.code-workspace
+#app-specific ftypes
+*.code-workspace
+
+#app-specific files
 .lovelyignore
 .luarc.json
 .vscode
 
+#text types
+*.md
+
 #text files
-.md
 !README.md
