--- a/lovely/inscr.toml
+++ b/lovely/inscr.toml
@@ -40,7 +40,7 @@ if G.GAME.raqeffects and next(G.GAME.raqeffects) and card.config.center.key == '
     local old_ability, old_center, old_center_key, extra_jokers_list, jokers_table = copy_table(card.ability), card.config.center, card.config.center_key, copy_table(G.GAME.raqeffects), {}
     table.sort(extra_jokers_list, function(a, b) return (G.P_CENTERS[a].order or 0) < (G.P_CENTERS[b].order or 0) end)
     for _, k in ipairs(extra_jokers_list) do
-        Hyperglobal.safe_set_ability(card, G.P_CENTERS[k])
+        Hyperfixation.safe_set_ability(card, G.P_CENTERS[k])
         card:update(0.016)
         --print(card.ability.extra)
         local joker, trig = card:calculate_joker(context)
@@ -89,7 +89,7 @@ end
 '''
 position = "after"
 payload = '''
-if Hyperglobal.calcdollarjokesters[_card.config.center.key] then
+if Hyperfixation.calcdollarjokesters[_card.config.center.key] then
     hpfx_Transform(_card)
 end
 '''
